apps/base/new-demo/whereami/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: new-demo
  labels:
    gateway: external-http
spec:
  hostnames:
  - "team-alpha.endpoints.anz-next-demo-23.cloud.goog"
  parentRefs:
  - name: team-alpha-external-http
    namespace: team-alpha-tenant
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: whereami
      port: 80
